refactor: final cleanup